.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconrcdist__c.object
<CustomObject>
    <description>soconrcdist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconrcdist_soconrc__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soconrcdist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconrcdist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcdist_amount__c</fullName>
        <inlineHelpText>Either enter Amount in which case the Percentage is automatically calculated, or enter Percentage and the Amount is automatically calculated.</inlineHelpText>
        <label>Amount</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcdist_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcdist_pct__c</fullName>
        <inlineHelpText>Either enter Percentage in which case the Amount is automatically calculated, or enter Amount and the Percentage is automatically calculated.</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcdist_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>A valid Sub Ledger Account where the GL Type = Revenue.</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges Account Dists</relationshipLabel>
        <relationshipName>soconrcdists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconrcdist_soconrc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Recurring Charge</label>
        <referenceTo>rstk__soconrc__c</referenceTo>
        <relationshipLabel>Sales Account Distribution</relationshipLabel>
        <relationshipName>soconrcdists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Recurring Charges Account Distr</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Recurring Charges Account Dists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Amount</fullName>
        <active>true</active>
        <description>Amount cannot be less than zero.</description>
        <errorConditionFormula>rstk__soconrcdist_amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Percentage</fullName>
        <active>true</active>
        <description>Percentage cannot be less than zero.</description>
        <errorConditionFormula>rstk__soconrcdist_pct__c &lt; 0</errorConditionFormula>
        <errorMessage>Percentage cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Percentage_Amount</fullName>
        <active>true</active>
        <description>The Amount and Percentage fields are related – one or the other or both must be specified.</description>
        <errorConditionFormula>ISBLANK(rstk__soconrcdist_amount__c ) &amp;&amp;  ISBLANK( rstk__soconrcdist_pct__c )</errorConditionFormula>
        <errorMessage>The Amount and Percentage fields are related – one or the other or both must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Account</fullName>
        <active>true</active>
        <description>Sales Account is Required , not modifiable , should belong to Recurring Charge Product Division and of type Revenue.</description>
        <errorConditionFormula>ISBLANK( rstk__soconrcdist_salesacct__c ) || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__soconrcdist_salesacct__c ) ) ||  (rstk__soconrcdist_salesacct__r.rstk__syacc_div__c &lt;&gt;  rstk__soconrcdist_soconrc__r.rstk__soconrc_soprod__r.rstk__soprod_div__c ) ||  (  TEXT(rstk__soconrcdist_salesacct__r.rstk__syacc_gltype_pl__c) &lt;&gt; &apos;Revenue&apos;)</errorConditionFormula>
        <errorMessage>Sales Account is Required , not modifiable , should belong to Recurring Charge Product Division and of type Revenue.</errorMessage>
    </validationRules>
</CustomObject>